DFG should not emit GetMethod node https://bugs.webkit.org/show_bug.cgi?id=73175

Reviewed by Gavin Barraclough.

Replaces all instances of the GetMethod node with GetById. This appears to
be a slight win on V8. This patch leaves GetMethod support in the code-base,
making this decision easy to reverse, for now.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseBlock):



Canonical link: https://commits.webkit.org/89698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101217 268f45cc-cd09-0410-ab3c-d52691b4dbfc